--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,10 +17,42 @@
 
 	<title> <%= @title %> </title>
 </head>
+
 <body>
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+	   		<div class="navbar-header">
+  				<a class="navbar-brand" href="#"> Fools for Food </a> 
+    		</div>
+    		<div class="collapse navbar-collapse">
+      			<ul class="nav navbar-nav">
+       				<li class="active"><a href="#"> Home <span class="sr-only">(current)</span></a></li>
+        			<li><a href="#"> My Profile </a></li>
+      			</ul>
+      			<form class="navbar-form navbar-left">
+       				<div class="form-group">
+          				<input type="text" class="form-control" placeholder="Search">
+        			</div>
+        			<button type="submit" class="btn btn-default">Submit</button>
+      			</form>
+      			<ul class="nav navbar-nav navbar-right">
+        			<li><a href="#">Food News </a></li>
+      			</ul>
+    		</div><!-- /.navbar-collapse -->
+  		</div><!-- /.container-fluid -->
+	</nav>
+
 	<%= yield %>
+
+	<div id="footerTag">
+		&copy; IzzArnold 2016
+	</div>
 </body>
-	<footer id="footerTag">
-	&copy; IzzArnold 2016
-	</footer>
+
+
 </html>
+
+
+
+
+
