--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,6 +1,6 @@
-<div class="containerContact">	
+<div class="container">	
 	<div class="col-md-12 text-center">
-	  <form method="POST" action="/contact">
+	  <form method="POST" action="/contact" id="contactForm">
 	    <label for="name">Please enter your username: </label>
 	    <input type="text" name="name" placeholder="username" />
 	    <br>
