--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,28 +19,29 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-default">
-		<div class="container-fluid">
-	   		<div class="navbar-header">
-  				<a class="navbar-brand" href="#"> Fools for Food </a> 
-    		</div>
-    		<div class="collapse navbar-collapse">
-      			<ul class="nav navbar-nav">
-       				<li class="active"><a href="#"> Home <span class="sr-only">(current)</span></a></li>
-        			<li><a href="#"> My Profile </a></li>
-      			</ul>
-      			<form class="navbar-form navbar-left">
-       				<div class="form-group">
-          				<input type="text" class="form-control" placeholder="Search">
-        			</div>
-        			<button type="submit" class="btn btn-default">Submit</button>
-      			</form>
-      			<ul class="nav navbar-nav navbar-right">
-        			<li><a href="#">Food News </a></li>
-      			</ul>
-    		</div><!-- /.navbar-collapse -->
-  		</div><!-- /.container-fluid -->
-	</nav>
+	<div class="container" id="contactCon">
+		<div class="row">
+			<div class="col-xs-2">
+				<li><a href="/"> Home </a></li>
+			</div>
+			<div class="col-xs-2">
+				<li><a href="/profile"> My Profile </a></li>
+			</div>
+			<div class="col-xs-2">
+				<li><a href="/stats"> Food for Thought </a></li>
+			</div>
+			<div class="col-xs-2">
+				<li><a href="/contact"> Contact </a></li>
+			</div>	
+			<div class="col-xs-4">
+				<form class="searchBar">
+    				<input type="text" placeholder="Search">
+    				<button type="submit" class="btn btn-default"> Submit </button>
+    			</form>
+			</div>
+			
+		</div>
+	</div>
 
 	<%= yield %>
 
@@ -48,8 +49,6 @@
 		&copy; IzzArnold 2016
 	</div>
 </body>
-
-
 </html>
 
 
