--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,15 +1,16 @@
-<div class="container">	
+<div class="container" >	
 	<div class="col-md-12 text-center">
 	  <form method="POST" action="/contact" id="contactForm">
-	    <label for="name">Please enter your username: </label>
-	    <input type="text" name="name" placeholder="username" />
+	    <label for="name" class="contText">Please enter your name: </label>
+	    <input type="text" name="name" placeholder="username" class="contText" />
 	    <br>
 	    <br>
-	    <label for="email">please confirm your contact email: </label>
-	    <input type="email" name="email" placeholder="email" />
+	    <label for="email" class="contText">Please enter an email address where we can reach you: </label>
+	    <input type="email" name="email" placeholder="email" class="contText" />
 	    <br>
 	    <br>
-	  	<textarea cols="30" rows="10" name="message"></textarea>
+	  	<textarea cols="30" rows="10" name="message" maxlength="500"></textarea>
+	  	<p id="cLim"> character limit: 500 </p>
 	  	<br>
 	  	<br>
 	  <input type="submit" class="btnContact"/>
