--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,19 +21,19 @@
 <body>
 	<div class="container" id="contactCon">
 		<div class="row">
-			<div class="col-xs-2">
-				<li><a href="/"> Home </a></li>
+			<div class="col-xs-2 text">
+				<li><a href="/" class="navText"> Home </a></li>
 			</div>
-			<div class="col-xs-2">
-				<li><a href="/profile"> My Profile </a></li>
+			<div class="col-xs-2 text">
+				<li><a href="/profile" class="navText"> My Profile </a></li>
 			</div>
-			<div class="col-xs-2">
-				<li><a href="/stats"> Food for Thought </a></li>
+			<div class="col-xs-2 text">
+				<li><a href="/stats" class="navText"> Food for Thought </a></li>
 			</div>
-			<div class="col-xs-2">
-				<li><a href="/contact"> Contact </a></li>
+			<div class="col-xs-2 text">
+				<li><a href="/contact" class="navText"> Contact </a></li>
 			</div>	
-			<div class="col-xs-4">
+			<div class="col-xs-4 sBtn">
 				<form class="searchBar">
     				<input type="text" placeholder="Search">
     				<button type="submit" class="btn btn-default"> Submit </button>
