cam's demonstration is included in profile page

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -2,11 +2,11 @@
 	<div class="col-md-12 text-center">
 	  <form method="POST" action="/contact" id="contactForm">
 	    <label for="name" class="contText">Please enter your name: </label>
-	    <input type="text" name="name" placeholder="username" class="contText" />
+	    <input type="text" name="name" placeholder="Name" class="contText" />
 	    <br>
 	    <br>
 	    <label for="email" class="contText">Please enter an email address where we can reach you: </label>
-	    <input type="email" name="email" placeholder="email" class="contText" />
+	    <input type="email" name="email" placeholder="Email" class="contText" />
 	    <br>
 	    <br>
 	  	<textarea cols="30" rows="10" name="message" maxlength="500"></textarea>
