--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,11 +9,14 @@
 	<!-- bootstrap Library -->
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
+	<!-- fontawesome Library -->
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+
 	<!-- css stylesheet -->
-	<link rel="stylesheet" type="text/css" href="<%= @style %>"> 
+	<link rel="stylesheet" type="text/css" href="/<%= @style %>"> 
 
 	<!-- javascript  -->
-	<script src="js/main.js"></script>
+	<script src="/js/main.js"></script>
 
 	<title> <%= @title %> </title>
 </head>
