minor changes made to the profile page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,10 +24,11 @@
 	height: 30px;*/
 	text-align: center;
 	/*margin-left: 40%;*/
-
 }
 
-
+#profiletest{
+	padding-left: 220px;
+}
 
 /* Home Page Style */
 
