updated contact page, bringing in sql data

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -46,7 +46,9 @@
 		</div>
 	</div>
 
-	<%= yield %>
+	<div class="mainContent">
+		<%= yield %>
+	</div>
 
 	<div id="footerTag">
 		&copy; IzzArnold 2016
