--- a/views/home.erb
+++ b/views/home.erb
@@ -1,6 +1,7 @@
-<ol>
-<% @users.each do |user| %>
+<div class="homeWrapper">
+	<ol>
+	<% @users.each do |user| %>
 
-	<li><a href="/profile/<%= user.id %>"><%= user.first_name %></a></li> 
-<% end %>
-</ol>
+		<li><a href="/profile/<%= user.id %>"><%= user.first_name %></a></li> 
+	<% end %>
+	</ol>
