updated profile comments view

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,16 +25,16 @@
 	<div class="container" id="contactCon">
 		<div class="row">
 			<div class="col-xs-2 text">
-				<li><a href="/" class="navText"> Home </a></li>
+				<a href="/" class="navText"> Home </a>
 			</div>
 			<div class="col-xs-2 text">
-				<li><a href="/profile" class="navText"> My Profile </a></li>
+				<a href="/profile" class="navText"> My Profile </a>
 			</div>
 			<div class="col-xs-2 text">
-				<li><a href="/stats" class="navText"> Food for Thought </a></li>
+				<a href="/stats" class="navText"> Food for Thought </a>
 			</div>
 			<div class="col-xs-2 text">
-				<li><a href="/contact" class="navText"> Contact </a></li>
+				<a href="/contact" class="navText"> Contact </a>
 			</div>	
 			<div class="col-xs-4 sBtn">
 				<form class="searchBar">
