--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,13 +1,15 @@
 <div class="profileWrapper">
 <div class="commentdetails">
-	<%= @user.first_name + " " + @user.last_name + "visited" %>
+	<%= @user.first_name + " " + @user.last_name + " " + "visited" + " " %>
 	<% @user.comments.each do |comment| %>
 		<strong><%= comment.restaurant.restaurant_name %></strong> 
-		<p><%= comment.comment %></p>
+		<p><%= "He said: " + comment.comment %></p>
 
 		<% 5.times do |i| %>
+	<div id="rating">
 		<i class="fa fa-star<%= "-o" if i+1 > comment.rating %>"></i>
 		<% end %>
+	</div>
 	<% end %>
 </div>
 </div>
