--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,14 @@
 /* Layout Page Style */
+html,body {
+	width: 100%;
+	height: 100%;
+}
 *{
 	font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
 }
 
 .mainContent{
-	min-height: 600px;
+	min-height: 400px;
 }
 
 #contactCon{
@@ -41,6 +45,10 @@
 .text{
 	padding-top: 7px;
 	font:bold; 
+}
+
+.row {
+	width: 100%;
 }
 
 
@@ -94,5 +102,15 @@
 	text-align: center;
 }
 
-/* Search_Users Page style*/
+/* Sign_up Page style*/
+.signupWrapper{
+	/*background-image: url("https://media.giphy.com/media/b8q8jYO8xKWoE/giphy.gif");*/
+	width: cover;
+	background-repeat: no-repeat;
+}
+
+#burger {
+	width: 100%;
+	padding-top: 0;
+}
 
