Looking to receive latest changes on github

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,13 +31,13 @@
 				<li><a href="/profile" class="navText"> My Profile </a></li>
 			</div>
 			<div class="col-xs-2 text">
-				<li><a href="/stats" class="navText"> &nbsp &nbsp &nbsp Food for Thought </a></li>
+				<li><a href="/stats" class="navText"> Food for Thought </a></li>
 			</div>
 			<div class="col-xs-1 text">
 				<li><a href="/contact" class="navText"> Contact </a></li>
-			</div>	
+			</div>
 			<div class="col-xs-2 text">
-				<li><a href="/stats" class="navText"> Settings </a></li>
+				<li><a href="/settings" class="navText"> Settings </a></li>
 			</div>
 			<div class="col-xs-5 sBtn">
 				<form class="searchBar">
@@ -58,8 +58,4 @@
 	</div>
 </body>
 </html>
-
-
-
-
 
