--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,7 @@
 <div class="homeWrapper">
 	<ol>
-	<% @users.each do |user| %>
-
-		<li><a href="/profile/<%= user.id %>"><%= user.first_name %></a></li> 
-	<% end %>
+		<% @users.each do |user| %>
+			<li><a href="/profile/<%= user.id %>"><%= user.first_name %></a></li> 
+		<% end %>
 	</ol>
+</div>
