--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,6 +70,12 @@ html,body {
 
 }
 
+#settingsForm{
+	border: solid lightgrey 1px;
+	padding: 10px;
+	border-max-width: 650px;
+}
+
 #contactForm{
 	border: solid lightgrey 1px;
 	padding-top: 10px;
@@ -91,6 +97,8 @@ html,body {
 	width: 250px;
 	border: solid black 1px;
 	margin: 0 auto;
+	padding-left: 5px;
+	padding-top: 5px;
 }
 
 #rating{
@@ -112,3 +120,4 @@ html,body {
 .row{
 	list-style: none;
 }
+
