--- a/views/layout.erb
+++ b/views/layout.erb
@@ -29,7 +29,7 @@
 				<li><a href="/profile" class="navText"> Profile </a></li>
 				<li><a href="/stats" class="navText"> Food for Thought </a></li>
 				<li><a href="/contact" class="navText"> Contact </a></li>
-				<li><a href="/stats" class="navText"> Settings </a></li>
+				<li><a href="/settings" class="navText"> Settings </a></li>
 			</ul>
 			<form class="searchBar">
 				<input type="text" placeholder="Search">
