added sessions login

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,7 +25,7 @@
 	<header id="contactCon">
 		<nav>
 			<ul>
-				<li><a href="/" 1class="navText"> Home </a></li>
+				<li><a href="/" class="navText"> Home </a></li>
 				<li><a href="/profile" class="navText"> Profile </a></li>
 				<li><a href="/stats" class="navText"> Food for Thought </a></li>
 				<li><a href="/contact" class="navText"> Contact </a></li>
