--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,11 +2,13 @@
 html,body {
 	width: 100%;
 	height: 100%;
+	background-color: #81C977;
 }
+
 *{
 	font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
 }
-}
+
 nav ul {
 	list-style-type: none;
 	display: inline-block;
@@ -14,6 +16,12 @@ nav ul {
 nav li {
 	display: inline-block;
 	padding: 0 20px;
+	padding-top: 5px;
+}
+
+.navText{
+	font-size: 17px;
+	color: white;
 }
 
 .searchBar{
@@ -26,16 +34,13 @@ nav li {
 }
 
 #contactCon{
-	border: solid lightgrey 1px;
-	background-color: lightgrey;
+	border: solid #A8B1C4 1px;
+	background-color: #A8B1C4;
 	margin-bottom: 20px;
-
 }
 
-
-
 .btnContact{
-	padding: 0px 10px;
+	padding: 0px 13px;
 }
 .btn-default{
 	padding: 2px 7px;
@@ -54,7 +59,6 @@ nav li {
 	padding-top: 15px;
 	font-family: Copperplate, "Copperplate Gothic Light";
 	text-align: center;
-	/*margin-left: 40%;*/
 }
 
 .text{
@@ -63,6 +67,7 @@ nav li {
 }
 
 /* Home Page Style */
+
 
 /* Contact Page style */
 
@@ -81,7 +86,7 @@ nav li {
 }
 
 #contactForm{
-	border: solid lightgrey 1px;
+	border: solid #81C977 1px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	border-max-width: 650px;
@@ -107,36 +112,83 @@ nav li {
 	text-align: center;
 }
 
-/* Sign_up Page style*/
-.signupWrapper{
-	border: solid lightgrey 1px;
-	padding: 5px;
-	width: 450px;
+/* Sign_in Page style*/
+.signinWrapper{
+	border: solid #81C977 1px;
+	padding: 20px;
+	width: 470px;
 	text-align: center;
 	margin: 0 auto;
+	margin-top: 100px;
+	background-color: #5B86E1;
 }
-#emailLog{
-	width: 317px;
+#usernameLog{
+	width: 270px;
 }
 
 #passwordLog{
-	width: 317px;
-}
-
-#burger {
-	width: 100%;
-	padding-top: 0;
+	width: 270px;
 }
 
 .inputLog{
 	margin-top: 5px;
 }
 
-/*.row{
-	list-style: none;
-}
-*/
 .btnLog{
 	margin-bottom: 4px;
-	opacity: .4;
+
 }
+
+.welcome{
+	margin-top: 10px;
+}
+
+/*Sign_up Page Style*/
+
+.signupWrapper{
+	border: solid #5B86E1 1px;
+	padding: 5px;
+	width: 450px;
+	text-align: center;
+	margin: 0 auto;
+}
+
+#emailLog{
+	width: 317px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
