--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -1,17 +1,15 @@
 <div class="signupWrapper">
-	<!-- <img src="https://media.giphy.com/media/b8q8jYO8xKWoE/giphy.gif" id="burger"> -->
-<!-- 	<div class="container"> -->
 		<h1> Fools for Food </h1>
-		<form method="POST" action="/home" id="loginForm" onsubmit="">
+		<form method="POST" action="/home">
+		<h5> Make a free account </h5>
 			<input type="text" name="name" placeholder="First name" autocomplete="off" class="inputLog">
 			<input type="text" name="name" placeholder="Surname" autocomplete="off" class="inputLog">
 		<br>
 			<input type="text" name="email" placeholder="Email" autocomplete="off" id="emailLog" class="inputLog">
 		<br>
-			<input type="password" name="password" placeholder="Password" maxlength="25" minlength="10" autocomplete="off" id="passwordLog" class="inputLog">
+			<input type="password" name="password" placeholder="Password" maxlength="25" autocomplete="off" id="passwordLog" class="inputLog">
 		<br>
 			<input type="submit" name="button" id="btnLog" class="inputLog">
 		</form>
 	<span id="console"><%= @msg %></span>
-	<!-- </div> -->
 </div>
