added functional sessionsto login and to contact page; changed styling for color scheme

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -6,7 +6,7 @@
 	    		<input type="text" name="name" placeholder="Name" class="contText" />
 	    		<br>
 	    		<br>
-	    		<label for="email" class="contText">Please enter an email address where we can reach you: </label>
+	    		<label for="email" class="contText">Please enter your email address: </label>
 	   		 	<input type="email" name="email" placeholder="Email" class="contText" />
 	   			<br>
 	    		<br>
