--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
 html,body {
 	width: 100%;
 	height: 100%;
-	background-color: #81C977;
+	background-color: #95D3DC;
 }
 
 *{
@@ -71,22 +71,13 @@ nav li {
 
 /* Contact Page style */
 
-.navbar-form{
-	padding: 0px 50px;
-}
-
-.navbar{
-	position: relative;
-}
-
 #cLim{
 	font-size: 10px;
-	opacity: .3;
-
+	opacity: .8;
 }
 
 #contactForm{
-	border: solid #81C977 1px;
+	border: solid #95D3DC 1px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	border-max-width: 650px;
@@ -97,6 +88,7 @@ nav li {
 }
 .contText{
 	font-family: Perpetua, Baskerville, "Big Caslon", "Palatino Linotype", Palatino, "URW Palladio L", "Nimbus Roman No9 L", serif;
+	font-size: 15px;
 }
 
 
