--- a/views/settings.erb
+++ b/views/settings.erb
@@ -20,7 +20,7 @@
 				<br>
 				<input type="submit" class="btnSettings" value="Edit" />
 				</form>
-				<span id="console"><%= @msg %></span>
+				<span class="tempMsg" id="console"><strong><%= @msg %></strong></span>
 			</div>
 		</div>
 	</div>
