--- a/views/settings.erb
+++ b/views/settings.erb
@@ -3,7 +3,6 @@ document.addEventListener("DOMContentLoaded",function(){
 //ref: http://stackoverflow.com/questions/13389751/change-tag-using-javascript#answer-13389835	
 	document.querySelector('.btnSettings[value=Edit]').addEventListener('click', toggleInput );
 });
-
 function toggleInput(event){
 	var fields = ["first_name","last_name","email","username","password"];
 	fields.forEach( function(field) {
@@ -19,7 +18,6 @@ function toggleInput(event){
 	event.target.value = "Save";
 	event.target.removeEventListener('click',toggleInput);
 }
-
 </script>
 
 <div class="settingsWrapper">
@@ -30,16 +28,28 @@ function toggleInput(event){
 			<div class="col-xs-4">
 				<form method="POST" action="/settings" id="settingsForm">
 <!-- 				<label for="name">Your name: <= @user.first_name + " " + @user.last_name if @user ></label> -->
-				<label for="name">Your name:</label> <span id="first_name">Cam</span> <span id="last_name">Crews</span>
+				<label for="first_name">First Name:</label>
+				<span id="first_name">Cam</span>
 				<br>
 				<br>
-				<label for="email">Your contact email: </label><span id="email">camcrews@nycda.com</span>
+				<br>
+				<label for="last_name">Last Name:</label>
+				<span id="last_name">Crews</span>
 				<br>
 				<br>
-				<label for="username">Your username: </label><span id="username">camerican</span>
+				<br>
+				<label for="email">email:</label>
+				<span id="email">camcrews@nycda.com</span>
 				<br>
 				<br>
-				<label for="password">Your password: </label><span id="password">hawaii</span>
+				<br>
+				<label for="username">Username: </label>
+				<span id="username">camerican</span>
+				<br>
+				<br>
+				<br>
+				<label for="password">password: </label>
+				<span id="password">hawaii</span>
 				<br>
 				<br>
 				<input type="submit" class="btnSettings" value="Edit" />
