added login protection to all pages except contact.erb; added styling; added images

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,6 +162,21 @@ nav li {
 	width: 317px;
 }
 
+#signupMes{
+	text-align: center;
+	font-size: 50px;
+	padding: 10px;
+
+}
+
+/*Stats Page Style*/
+.statsWrapper{
+	text-align: center;
+}
+
+#rotateimg{
+	width: 400px;
+}
 
 
 
