--- a/views/home.erb
+++ b/views/home.erb
@@ -4,4 +4,6 @@
 			<li><a href="/profile/<%= user.id %>"><%= user.first_name %></a></li> 
 		<% end %>
 	</ol>
+<!-- 	<img src="http://cdn.torontolife.com/wp-content/uploads/2015/11/best-burgers-toronto-09-four-guys-burger.jpg"> -->
+
 </div>
