--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -1,3 +1,7 @@
+
+<div>
+	<h1 id="signupMes"> Not a member? Sign up! </h1>
+</div>
 <div class="signupWrapper">
 		<h1> Fools for Food </h1>
 		<form method="POST" action="/home">
