--- a/views/sign_in.erb
+++ b/views/sign_in.erb
@@ -1,7 +1,6 @@
-
 <div class="signinWrapper">
-<h1 id="welcome"> Fools for Food </h1>
-<h5> Login required </h5>
+<h1 class="welcome"> Fools for Food </h1>
+<h5 class="welcome"> Login required </h5>
 		<form method="POST" action="/sign_in">
 			<input type="text" name="username" placeholder="Username" autocomplete="off" id="usernameLog" class="inputLog">
 				<br>
@@ -12,3 +11,13 @@
 			<span id="console"><%= @msg %></span>
 		</form>
 </div>
+
+<!-- <div class="imagegallery">
+	<img class="rotatingimage" src="/img/dogBurger.jpeg">
+	<img class="rotatingimage" src="http://www.faviana.com/blog/wp-content/uploads/2015/09/shakeshack.jpg">
+</div>
+<div class="imagegallery">
+	<img class="rotatingimage" src="/img/icecream.jpeg">
+	<img class="rotatingimage" src="/img/pasta.jpeg">
+</div>
+ -->
