--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,8 @@
 html,body {
 	width: 100%;
 	height: 100%;
-	background-color: #95D3DC;
+	background-image: url(/img/3.jpeg);
+	background-size: 1307px;
 }
 
 *{
@@ -55,10 +56,14 @@ nav li {
 }
 
 #footerTag {
-	font-size: 13px;
+	margin-top: 55px;
+	margin-right: 35px;
+	font-size: 14px;
 	padding-top: 15px;
 	font-family: Copperplate, "Copperplate Gothic Light";
-	text-align: center;
+	text-align: right;
+	color: black;
+/*	font-weight: bold;*/
 }
 
 .text{
@@ -67,6 +72,23 @@ nav li {
 }
 
 /* Home Page Style */
+.homeWrapper{
+	width: 80%;
+	margin: 0 auto;
+	text-align: center;
+}
+.homeWrapper ol {
+	width: 300px;
+	text-align: left;
+	display: inline-block;
+}
+.comSpace{
+	min-height: 150px;
+	min-width: 200px;
+}
+#homesub{
+	margin-top: 15px;
+}
 
 /* Settings Page Style */
 
@@ -84,7 +106,6 @@ nav li {
 }
 
 .tempMsg{
-/*	padding-left: 55px;*/
 	display: block;
 	font-size: 18px;
 	text-align: center;
@@ -95,8 +116,6 @@ nav li {
 .navbar-form{
 	padding: 0px 50px;
 }
-
-/* Contact Page style */
 
 #cLim{
 	font-size: 10px;
@@ -139,14 +158,19 @@ nav li {
 
 /* Sign_in Page style*/
 .signinWrapper{
-	border: solid #81C977 1px;
+	border: solid rgba(255,255,255,0.85) 1px;
+	border-radius: 55%;
 	padding: 20px;
-	width: 470px;
+	width: 400px;
 	text-align: center;
-	margin: 0 auto;
-	margin-top: 100px;
-	background-color: #5B86E1;
+	margin-left: 65%;
+	margin-top: 20px;
+	background-color: rgba(255,255,255,0.85);
 }
+#welcome{
+	color: black;
+}
+
 #usernameLog{
 	width: 270px;
 }
@@ -166,6 +190,10 @@ nav li {
 
 .welcome{
 	margin-top: 10px;
+}
+
+.rotatingimage{
+	display: none;	
 }
 
 /*Sign_up Page Style*/
