--- a/views/home.erb
+++ b/views/home.erb
@@ -4,6 +4,12 @@
 			<li><a href="/profile/<%= user.id %>"><%= user.first_name %></a></li> 
 		<% end %>
 	</ol>
-<!-- 	<img src="http://cdn.torontolife.com/wp-content/uploads/2015/11/best-burgers-toronto-09-four-guys-burger.jpg"> -->
+	 <form>
+	 	<h4> Want to leave a comment? </h4>
+	 	<textarea name="commentArea" class="comSpace"> </textarea>
+	 	<br>
+	 	<button value="submit" id="homesub"> Submit </button>
+
+	 </form>
 
 </div>
