--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,21 +75,16 @@ nav li {
 	padding: 10px;
 	border-max-width: 650px;
 }
-
-.btnSettings{
+.btnSettingsAlign{
 	display: block;
 	margin: 0px auto;
+}
+.btnSettings{
+	margin-left: 28px;
 	padding: 2px 10px;
 	border-radius: 6px;
 }
 
-.tempMsg{
-/*	padding-left: 55px;*/
-	display: block;
-	font-size: 18px;
-	text-align: center;
-	padding-top: 5px;
-}
 /* Contact Page style */
 
 .navbar-form{
