--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,13 +21,12 @@
 	<title> <%= @title %> </title>
 </head>
 
-<body>
+<body<%= body_class %>>
 	<header id="contactCon">
 		<nav>
 			<ul>
 				<li><a href="/" class="navText"> Home </a></li>
 				<li><a href="/profile" class="navText"> Profile </a></li>
-				<li><a href="/stats" class="navText"> Food for Thought </a></li>
 				<li><a href="/contact" class="navText"> Contact </a></li>
 				<li><a href="/settings" class="navText"> Settings </a></li>
 			</ul>
