--- a/views/sign_in.erb
+++ b/views/sign_in.erb
@@ -2,12 +2,12 @@
 <h1 class="welcome"> Fools for Food </h1>
 <h5 class="welcome"> Login required </h5>
 		<form method="POST" action="/sign_in">
-			<input type="text" name="username" placeholder="Username" autocomplete="off" id="usernameLog" class="inputLog">
-				<br>
-					<input type="password" name="password" placeholder="Password" maxlength="25" minlength="10" autocomplete="off" id="passwordLog" class="inputLog">
-				<br>
-					<input type="submit" name="button" value="Login" id="btnLog" class="inputLog">
-				</form>
+			<input type="text" name="username" placeholder="Username" autocomplete="off" id="usernameLog" class="inputLog" autofocus>
+			<br>
+				<input type="password" name="password" placeholder="Password" maxlength="25" autocomplete="off" id="passwordLog" class="inputLog">
+			<br>
+				<input type="submit" name="button" value="Login" id="btnLog" class="inputLog">
+			</form>
 			<span id="console"><%= @msg %></span>
 		</form>
 </div>
